[package]
name = "slip"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/thvdveld/slip-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "slip"]

[dependencies]

[dev-dependencies]
hexlit = "0.5.3"

[features]
default = []
