[package]
name = "slippers"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>"]
version = "0.1.2"
edition = "2021"
description = "Implementation of the SLIP RFC for `no_std`."
repository = "https://github.com/thvdveld/slippers"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "slip"]

[dependencies]

[dev-dependencies]
hexlit = "0.5.3"

[features]
default = []
